--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mongodb": "^5.5.0",
+    "mongoose": "^8.4.0",
     "node-fetch": "^3.2.6"
   }
 }
